# tappie

./: .editorconfig  Cargo.toml  README.md
.github/workflows/: build.yml
src/: app.rs  cli.rs  main.rs  text_reader.rs  ui.rs
