[package]
name = "tappie"
description = "Typing test for the terminal"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Neil Bryson Cargamento <neilbrysonmc@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1", features = ["derive"] }
crossterm = "0.23"
tui = "0.18"
